--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<header>
+  <div>
+    <nav class="navbar">
+        <ul class="navbar-list">
+            <li class="navbar-link"><a href="#sobreMi">Sobre Mi</a></li>
+            <li class="navbar-link"><a href="#habilidades">Habilidades</a></li>
+            <li class="navbar-link"><a href="#proyectos">Mis Proyectos</a></li>
+            <li class="navbar-link"><a href="#contactMe">Contáctame</a></li>
+        </ul>
+      </nav>
+</div>
+</header>
 <body>
   <app-root></app-root>
 </body>
+<footer>
+  <div class="footer-style">
+    <span id="contactMe">contactame</span>
+  </div>
+</footer>
 </html>
